--- a/resources/[ox]/ox_lib/locales/zh-tw.json
+++ b/resources/[ox]/ox_lib/locales/zh-tw.json
@@ -4,6 +4,11 @@
     "cancel": "取消",
     "close": "關閉",
     "confirm": "確認",
-    "more": "More..."
-  }
+    "more": "更多..."
+  },
+  "txadmin_announcement": "來自 %s 的伺服器通告",
+  "txadmin_dm": "來自 %s 的訊息",
+  "txadmin_warn": "您被 %s 警告了",
+  "txadmin_warn_content": "%s  \n操作 ID: %s",
+  "txadmin_scheduledrestart": "計劃內重啟"
 }
